--- a/index.css
+++ b/index.css
@@ -93,7 +93,7 @@ nav .ul_links li a:active{
 .section_1 .section_1_details{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    max-width: 1200px;
+    max-width: auto;
     margin: 0 auto;
 }
 .section_1 .col_1{
