--- a/index.css
+++ b/index.css
@@ -152,7 +152,7 @@ nav .ul_links li a:active{
 }
 .section_1 .col_2{
     width: 100%;
-    max-width: 50%;
+    max-width: 600px;
     margin: 0 auto;
     justify-content: center;
     align-items: center;
@@ -309,7 +309,7 @@ nav .ul_links li a:active{
 .how_it_works .how_container{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    max-width: auto;
+    max-width: 1200px;
     margin: 0 auto;
     background: #fff;
     padding: 25px;
